refactored backend to have common authService in the form of two flows, authflow & intrusionflow, reducting complexity for scaling in future
